Fix project for JDK 9.0.1